# zivo-exchange

./: .gitignore  .gitmodules  README.md  ZK_PROOF_IMPLEMENTATION_STATUS.md
zivo-v1/: .gitignore  Anchor.toml  PRODUCTION_SETUP.md  README.md  package.json
zivo-v1/docs/: magicblock-inco-architecture.md  orderbook-inco-architecture.md
zivo-v1/lightning-rod-solana/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
zivo-v1/programs/zivo-v1/: Cargo.toml
zivo-v1/programs/zivo-v1/src/: errors.rs  lib.rs  state.rs
zivo-v1/programs/zivo-v1/src/instructions/: bump_order_seq.rs  cancel_order.rs  close_order.rs  grant_allowance.rs  initialize.rs  initialize_deposit.rs  maker_claim_filled_order.rs  match_order.rs  mod.rs  place_order.rs  reset_state.rs  settle_match.rs  submit_match.rs
zivo-v1/scripts/: init-market.ts
zivo-v1/tests/: zivo-v1.ts
zivo-web/: SHIELDED_INTEGRATION.md  package.json  vercel.json
zivo-web/app/: globals.css  layout.tsx  page.tsx
zivo-web/components/: address-with-copy.tsx  airdrop-manager.tsx  commitment-history.tsx  delegate-mint-authority.tsx  header.tsx  inco-token-creator.tsx  initialize-shielded-pool.tsx  initialize-vault.tsx  padder.tsx  shielded-operations.tsx  spl-token-creator.tsx  tab-navigation.tsx  unwrap-token-old.tsx  unwrap-token.tsx  vault-list.tsx  whitelist-manager.tsx  wrap-and-shield.tsx  wrap-token-old.tsx  wrap-token.tsx
zivo-web/config/: orderbook-lut.json
zivo-web/idl/: inco_token.json  zivo_orderbook_program.json  zivo_wrap.json
zivo-web/scripts/: create-orderbook-lut.ts
zivo-web/utils/: commitment.ts  constants.ts  helius.ts  mints.ts  types.ts  zivo-wrap-idl.json  zk-proof.ts
zivo-web/wallet/: provider.tsx
zivo-wrap/: .env.example  Anchor.toml  README.md  package.json  tsconfig.json
zivo-wrap/docs/: shielded-wrap-inco-tokens.md  shielded-wrap-plan.md
zivo-wrap/idl/: inco_token.json
zivo-wrap/noir_circuit/: Nargo.toml  Prover.toml
zivo-wrap/programs/zivo-wrap/: Cargo.toml
zivo-wrap/programs/zivo-wrap/src/: errors.rs  lib.rs  state.rs
zivo-wrap/programs/zivo-wrap/src/instructions/: grant_allowance.rs  init_shielded_pool.rs  initialize_vault.rs  mod.rs  shielded_transfer.rs  unwrap_from_note.rs  unwrap_token.rs  wrap_and_commit.rs  wrap_token.rs
zivo-wrap/scripts/: generate-zk-proof.ts  noir-build.sh
(+56 files in other folders)
