[package]
name = "zivo-v1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zivo_orderbook_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
inco-token = { path = "../../../lightning-rod-solana/programs/inco-token", features = ["cpi"] }
