[package]
name = "zivo-wrap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zivo_wrap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "light-sdk/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
inco-token = { path = "../../../lightning-rod-solana/programs/inco-token", features = ["cpi"] }
light-hasher = "5.0.0"
light-sdk = { version = "0.18.0", features = ["anchor", "anchor-discriminator", "cpi-context"] }